src/test/deca/context/invalid/testVoidIdentifier.deca
// Description : type void pour un identificateur
{
    void x;
}
